--- a/manga.html
+++ b/manga.html
@@ -86,7 +86,8 @@
         }
 
         .wishlist-icon-link,
-        .cart-icon-link {
+        .cart-icon-link,
+        .search-icon-link {
             position: relative;
             font-size: 1.25rem;
             color: #000;
@@ -95,7 +96,8 @@
         }
 
         .wishlist-icon-link:hover,
-        .cart-icon-link:hover {
+        .cart-icon-link:hover,
+        .search-icon-link:hover {
             color: #C7382B;
         }
 
@@ -113,6 +115,193 @@
             justify-content: center;
             font-size: 0.75rem;
             font-weight: 700;
+        }
+
+        /* Search Modal */
+        .search-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.7);
+            backdrop-filter: blur(8px);
+            z-index: 2000;
+            align-items: flex-start;
+            justify-content: center;
+            padding-top: 15vh;
+        }
+
+        .search-modal.active {
+            display: flex;
+        }
+
+        .search-modal-content {
+            background: #fff;
+            border-radius: 20px;
+            width: 90%;
+            max-width: 600px;
+            padding: 2rem;
+            position: relative;
+            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            animation: searchSlideIn 0.3s ease;
+        }
+
+        @keyframes searchSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .search-close {
+            position: absolute;
+            top: 0.75rem;
+            right: 0.75rem;
+            background: #f5f5f5;
+            border: none;
+            font-size: 1.25rem;
+            color: #666;
+            cursor: pointer;
+            width: 36px;
+            height: 36px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            transition: all 0.3s;
+            z-index: 100;
+        }
+
+        .search-close:hover {
+            background: #e0e0e0;
+            color: #333;
+        }
+
+        .search-close i {
+            pointer-events: none;
+        }
+
+        .search-input-wrapper {
+            position: relative;
+            margin-bottom: 1rem;
+        }
+
+        .search-input-icon {
+            position: absolute;
+            left: 1rem;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #999;
+            font-size: 1.1rem;
+        }
+
+        .search-input {
+            width: 100%;
+            padding: 1rem 1rem 1rem 3rem;
+            border: 2px solid #e0e0e0;
+            border-radius: 12px;
+            font-size: 1.1rem;
+            font-family: 'DM Sans', sans-serif;
+            transition: border-color 0.3s;
+        }
+
+        .search-input:focus {
+            outline: none;
+            border-color: #C7382B;
+        }
+
+        .search-results {
+            max-height: 400px;
+            overflow-y: auto;
+        }
+
+        .search-result-item {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            padding: 1rem;
+            border-radius: 12px;
+            transition: background 0.2s;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .search-result-item:hover {
+            background: #f8f8f8;
+        }
+
+        .search-result-link {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            flex: 1;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .search-result-actions {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+        }
+
+        .search-add-btn {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            border: none;
+            background: linear-gradient(135deg, #ff758c 0%, #ff2e63 100%);
+            color: #fff;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s;
+            font-size: 0.9rem;
+        }
+
+        .search-add-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 4px 12px rgba(255, 46, 99, 0.4);
+        }
+
+        .search-result-image {
+            width: 50px;
+            height: 70px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
+        .search-result-info {
+            flex: 1;
+        }
+
+        .search-result-title {
+            font-weight: 600;
+            color: #1a1a1a;
+            margin-bottom: 0.25rem;
+        }
+
+        .search-result-type {
+            font-size: 0.85rem;
+            color: #666;
+        }
+
+        .search-result-price {
+            font-weight: 700;
+            color: #ff2e63;
+        }
+
+        .search-empty {
+            text-align: center;
+            padding: 2rem;
+            color: #666;
         }
 
         .mobile-menu-btn {
@@ -484,6 +673,9 @@
                 <a href="faq.html">FAQ</a>
                 <a href="contact.html">Contact</a>
                 
+                <a href="#" class="search-icon-link" onclick="toggleSearch(); return false;">
+                    <i class="fas fa-magnifying-glass"></i>
+                </a>
                 <a href="cart.html" class="cart-icon-link">
                     <i class="fas fa-bag-shopping"></i>
                     <span class="cart-count" id="cartCount">0</span>
@@ -514,6 +706,20 @@
     <div class="toast" id="toast">
         <i class="fas fa-check-circle"></i>
         <span>Added to cart!</span>
+    </div>
+
+    <!-- Search Modal -->
+    <div class="search-modal" id="searchModal">
+        <div class="search-modal-content">
+            <button class="search-close" onclick="toggleSearch()">
+                <i class="fas fa-xmark"></i>
+            </button>
+            <div class="search-input-wrapper">
+                <i class="fas fa-magnifying-glass search-input-icon"></i>
+                <input type="text" class="search-input" id="globalSearchInput" placeholder="Search manga, novels, authors..." oninput="performGlobalSearch(this.value)">
+            </div>
+            <div class="search-results" id="searchResults"></div>
+        </div>
     </div>
 
     <!-- Footer -->
@@ -602,6 +808,90 @@
             if (btn && nav) {
                 btn.addEventListener('click', function() {
                     nav.classList.toggle('open');
+                });
+            }
+        });
+
+        // Global Search Functions
+        function toggleSearch() {
+            const modal = document.getElementById('searchModal');
+            const input = document.getElementById('globalSearchInput');
+            modal.classList.toggle('active');
+            if (modal.classList.contains('active')) {
+                setTimeout(() => input.focus(), 100);
+            } else {
+                input.value = '';
+                document.getElementById('searchResults').innerHTML = '';
+            }
+        }
+
+        function performGlobalSearch(query) {
+            const resultsContainer = document.getElementById('searchResults');
+            if (!query.trim()) {
+                resultsContainer.innerHTML = '';
+                return;
+            }
+
+            const allProducts = [];
+            if (typeof products !== 'undefined') {
+                if (products.manga) {
+                    products.manga.forEach(p => allProducts.push({...p, type: 'Manga'}));
+                }
+                if (products.novels) {
+                    products.novels.forEach(p => allProducts.push({...p, type: 'Novel'}));
+                }
+            }
+
+            const searchTerm = query.toLowerCase();
+            const filtered = allProducts.filter(p => 
+                p.name.toLowerCase().includes(searchTerm) ||
+                (p.author && p.author.toLowerCase().includes(searchTerm))
+            ).slice(0, 8);
+
+            if (filtered.length === 0) {
+                resultsContainer.innerHTML = '<div class="search-empty">No products found</div>';
+                return;
+            }
+
+            resultsContainer.innerHTML = filtered.map(p => {
+                const link = p.type === 'Manga' ? 'manga.html' : 'novels.html';
+                const safeName = p.name.replace(/'/g, "\\'");
+                return '<div class="search-result-item">' +
+                    '<a href="' + link + '" class="search-result-link">' +
+                        '<img src="' + p.image + '" alt="' + p.name + '" class="search-result-image">' +
+                        '<div class="search-result-info">' +
+                            '<div class="search-result-title">' + p.name + '</div>' +
+                            '<div class="search-result-type">' + p.type + '</div>' +
+                        '</div>' +
+                    '</a>' +
+                    '<div class="search-result-actions">' +
+                        '<div class="search-result-price">৳' + p.price + '</div>' +
+                        '<button class="search-add-btn" onclick="addToCart(\'' + safeName + '\', ' + p.price + ', \'' + p.image + '\'); showToast(); return false;">' +
+                            '<i class="fas fa-plus"></i>' +
+                        '</button>' +
+                    '</div>' +
+                '</div>';
+            }).join('');
+        }
+
+        // Close search modal on Escape key
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                const modal = document.getElementById('searchModal');
+                if (modal.classList.contains('active')) {
+                    toggleSearch();
+                }
+            }
+        });
+
+        // Close search modal on background click
+        document.addEventListener('DOMContentLoaded', function() {
+            const modal = document.getElementById('searchModal');
+            if (modal) {
+                modal.addEventListener('click', function(e) {
+                    if (e.target === this) {
+                        toggleSearch();
+                    }
                 });
             }
         });
